fix guardian skill selection; fix guardian selection; fix drop relationship; fix pots increasing calculation